# mkdocs-swagger-ui-tag

./: .gitignore  404.html  CHANGELOG  MANIFEST.in  README.md  index.html  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.py  sitemap.xml  update-swagger-ui.sh
.github/workflows/: ci.yaml  codeql-analysis.yml  deploy-release.yml  documentation.yml  end2end.yml  integrity.yml  scheduled_unittests.yml  unittests.yml  unittests_codecov.yml
demo-mkdocs/: mkdocs.yml
demo-mkdocs/docs/: index.md  options.md  pet-store.md
demo-mkdocs/docs/demo/: build-in-multiple.md  multiple.md  nocache.md  oauth2.md  openapi-v3.1.md  pet-store-full-width.md  static-file.md  without-try-it-out.md
demo/build-in-multiple/: index.html  swagger-0326bfa6.html  swagger-88e5a024.html
demo/multiple/: index.html  swagger-2d257458.html  swagger-3f2185c3.html  swagger-c9742d63.html  swagger-f0a934cb.html
demo/nocache/: index.html  swagger-087267cc.html  swagger-e0871038.html
demo/oauth2/: index.html  swagger-0c0b07e6.html  swagger-1f2321d4.html
demo/openapi-spec/: sample-first.yaml  sample-second.yaml  sample-third.yaml
demo/openapi-v3.1/: index.html  swagger-07d9c9ab.html  swagger-1fb67202.html  swagger-8e0d8cec.html  swagger-b2989ab8.html
demo/pet-store-full-width/: index.html  swagger-558146ce.html
demo/static-file/: index.html  swagger-02bf326f.html
demo/without-try-it-out/: index.html  swagger-33604efd.html  swagger-c78c4596.html
docs/: 404.html  index.html  sitemap.xml
docs/options/: index.html  swagger-02dd5144.html  swagger-0aa67999.html  swagger-0f35139b.html  swagger-10164d0f.html  swagger-143d9cc2.html  swagger-14ed130a.html  swagger-20ffd038.html  swagger-28edbe12.html  swagger-2946df96.html  swagger-2969425d.html  swagger-352360a6.html  swagger-3ebbfab9.html  swagger-3f08088b.html  swagger-433ef527.html  swagger-44f53ea3.html  swagger-55474066.html  swagger-576eff74.html  swagger-603ce51f.html  swagger-617a830f.html  swagger-6c7d6095.html  swagger-6f3e244c.html  swagger-7b874576.html  swagger-84d7f537.html  swagger-88f971e5.html  swagger-8a00c32b.html  swagger-94084a09.html  swagger-94ce4608.html  swagger-952dde27.html  swagger-9621df54.html  swagger-96863b3e.html  swagger-9c260be9.html  swagger-ba4c76b0.html  swagger-badcdb3a.html  swagger-d217c224.html  swagger-d25bae17.html  swagger-d3b292e2.html  swagger-dce7e03c.html  swagger-e04e0e06.html  swagger-e1d0e4bd.html  (+7 more)
docs/pet-store/: index.html  swagger-04726bbb.html  swagger-0927dd30.html  swagger-0ff95fd0.html  swagger-2770db91.html  swagger-29b74b89.html  swagger-48a6860c.html  swagger-4bb20d42.html  swagger-5d15ed31.html  swagger-67259ce1.html  swagger-6d88f992.html  swagger-7286b324.html  swagger-7bdec86a.html  swagger-7d26cc62.html  swagger-863a323a.html  swagger-87883579.html  swagger-8e94a3b5.html  swagger-a02a51fa.html  swagger-a08a04d6.html  swagger-a67d3344.html  swagger-c9a2a092.html  swagger-c9b21455.html  swagger-d181ec16.html  swagger-d186620d.html  swagger-d1e95ef2.html  swagger-e1917fe5.html  swagger-e769887f.html
mkdocs_swagger_ui_tag/: plugin.py
mkdocs_swagger_ui_tag/swagger-ui/: LICENSE  swagger.html
options/: index.html  swagger-6c3c3790.html  swagger-7980599a.html  swagger-f158a01b.html  swagger-fc5a4533.html
pet-store/: index.html  swagger-002137e9.html  swagger-5df4dc6c.html
tests/: test_builds.py  test_e2e.py
tests/fixtures/: mkdocs-error.yml  mkdocs-filter-filenames.yml  mkdocs-filter-files.yml  mkdocs-material-options.yml  mkdocs-material-template.yml  mkdocs-material.yml  mkdocs-options.yml  mkdocs-site-url.yml  mkdocs-target-file.yml  mkdocs.yml
(+219 files in other folders)
