[project]
name = "mkdocs-swagger-ui-tag"
version = "0.7.0"
description = "A MkDocs plugin supports for add Swagger UI in page."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.13.3",
]

[project.entry-points."mkdocs.plugins"]
swagger-ui-tag = "mkdocs_swagger_ui_tag.plugin:SwaggerUIPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "click>=8.1.8",
    "codecov>=2.1.13",
    "mkdocs>=1.6.1",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-material>=9.6.7",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.10",
]
